--- a/build.gradle
+++ b/build.gradle
@@ -65,9 +65,14 @@ asciidoctor {
 }
 
 bootJar {
+    enabled = true
     dependsOn asciidoctor
     copy {
         from asciidoctor.outputDir
         into "src/main/resources/static/docs"
     }
+}
+
+jar {
+    enabled = false
 }
