--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.1",
     "element-plus": "^2.5.5",
+    "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
