--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.security:spring-security-crypto'
+    implementation 'org.springframework.session:spring-session-jdbc'
 
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
 
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
