--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,21 +4,19 @@ spring:
       enabled: true
       path: /h2-console
 
-datasource:
-  url: jdbc:h2:mem:ssarylog
-  username: sa
-  password:
-  driver-class-name: org.h2.driver
+  datasource:
+    url: jdbc:h2:mem:ssarylog;NON_KEYWORDS=USER
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
 
   jpa:
     defer-datasource-initialization: true
 
-data:
-  web:
-    pageable:
-      max-page-size: 2000
-      default-page-size: 20
-      one-indexed-parameters: true
+  data:
+    web:
+      pageable:
+        max-page-size: 2000
+        default-page-size: 20
+        one-indexed-parameters: true
 
-ssary:
-  jwtKey:
